very good version

--- a/src/components/ComparisonView.css
+++ b/src/components/ComparisonView.css
@@ -106,7 +106,11 @@
 }
 
 .char-silhouette.female {
-    transform: translateY(35px);
+    transform: translateY(25px);
+}
+
+.char-silhouette.male {
+    transform: translateY(5px);
 }
 
 .height-label {
